--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,8 @@ verify_ssl = true
 [packages]
 falcon = "==2.0.0"
 sqlalchemy = "==1.3.12"
-psycopg2 = "==2.8.4"
+#psycopg2 = "==2.8.4"
+psycopg2 = "==2.7.3.1"
 gunicorn = "*"
 faker = "*"
 webargs = "*"
